# Alpha-Brain

./: .gitignore  .vulture_whitelist.py  CLAUDE.md  DEPLOYMENT_READINESS.md  Dockerfile  Dockerfile.embedding  README.md  alembic.ini  canonical_names.example.json  docker-compose.override.yml  docker-compose.test-restore.yml  docker-compose.test.yml  docker-compose.yml  justfile  justfile.old  ofelia.ini  prototype_crystallization.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06ca7b9d16e1_fix_personality_weight_rescaling_formula.py  29f34d901ee8_add_name_index_table.py  7a8b9c0d1e2f_add_personality_directives_table.py  82a2ea345f7a_change_personality_weights_to_float32_.py  cad220075505_drop_unused_entities_table.py  fdb499244a88_initial_schema.py
docs/: lessons-learned-evals.md
scripts/: alembic.sh  migrate_stm_from_recall.py  validate_python.py
scripts/test/: test_7d_splash.py
src/alpha_brain/: __init__.py  cli.py  context_service.py  crystallization_helper.py  crystallization_service.py  database.py  docker_health.py  embeddings.py  embeddings_client.py  entity_service.py  health.py  helper.py  identity_service.py  interval_parser.py  knowledge_service.py  location_service.py  markdown_parser.py  memory_helper.py  memory_service.py  models.py  personality_service.py  schema.py  search_helper.py  server.py  settings.py  splash_engine.py  time_service.py
src/alpha_brain/model_inputs/: analysis_input.json
src/alpha_brain/prompts/: __init__.py  crystallization_analysis.j2  entity_extraction.j2  memory_analysis.j2  search_analysis.j2
src/alpha_brain/templates/: __init__.py
src/alpha_brain/templates/outputs/: add_alias_output.j2  analyze_cluster_output.j2  browse_output.j2  crystallize_output.j2  entity_alias.j2  entity_alias_output.j2  entity_list.j2  entity_list_output.j2  entity_merge.j2  entity_merge_output.j2  entity_show.j2  entity_show_output.j2  error_output.j2  find_clusters_output.j2  get_cluster_error_output.j2  get_cluster_output.j2  get_memory_output.j2  list_personality_output.j2  remember_output.j2  search_output.j2  whoami_output.j2
src/alpha_brain/tools/: __init__.py  add_alias.py  add_identity_fact.py  analyze_cluster.py  browse.py  create_knowledge.py  crystallize.py  entity.py  find_clusters.py  get_cluster.py  get_knowledge.py  get_memory.py  health_check.py  list_knowledge.py  list_personality.py  remember.py  search.py  set_context.py  set_personality.py  update_knowledge.py  update_personality.py  whoami.py
src/embedding_service/: __init__.py  app.py
tests/: README.md  __init__.py  conftest.py  wait_for_mcp.py
tests/e2e/: __init__.py  conftest.py  test_00_health_check.py  test_browse_memories.py  test_clustering.py  test_complete_workflow.py  test_entity_aware_search.py  test_entity_flow_minimal.py  test_entity_id_system.py  test_entity_lifecycle.py  test_entity_management.py  test_exact_search.py  test_example_markers.py  test_health_and_tools.py  test_identity_context.py  test_knowledge_management.py  test_knowledge_workflows.py  test_memory_lifecycle.py  test_output_templates.py  test_remember_and_search.py  test_search_helper.py  test_temporal_search.py
